tofu/networking.tf
#trivy:ignore:avd-aws-0178
resource "aws_vpc" "gitops_vpc" {
  #checkov:skip=CKV2_AWS_11:Keeping costs low by staying in the free tier

  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "gitops-vpc"
  }
}

resource "aws_internet_gateway" "gitops_igw" {
  vpc_id = aws_vpc.gitops_vpc.id

  tags = {
    Name = "gitops-igw"
  }
}

resource "aws_route_table" "gitops_rt" {
  vpc_id = aws_vpc.gitops_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gitops_igw.id
  }

  tags = {
    Name = "gitops-rt"
  }
}

resource "aws_subnet" "gitops_subnet" {
  vpc_id     = aws_vpc.gitops_vpc.id
  cidr_block = "10.0.1.0/24"

  #checkov:skip=CKV_AWS_130:Requirement of the GitOps bootcamp
  #trivy:ignore:avd-aws-0164
  map_public_ip_on_launch = true

  tags = {
    Name = "gitops-subnet"
  }
}

resource "aws_route_table_association" "gitops_rta" {
  subnet_id      = aws_subnet.gitops_subnet.id
  route_table_id = aws_route_table.gitops_rt.id
}
